<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/app_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/bg_video_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </FrameLayout>

    <FrameLayout
        android:id="@+id/floating_video_container"
        android:layout_width="108dp"
        android:layout_height="192dp"
        android:background="@android:color/background_light"
        app:layout_constraintHorizontal_bias="0.936"
        app:layout_constraintVertical_bias="0.821"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </FrameLayout>

    <ImageView
        android:id="@+id/joinBtn"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@color/white"
        android:scaleType="centerCrop"
        android:tint="#E91E63"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_add" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="60"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/audioBtn"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="20"
            android:background="@color/teal_200"
            android:scaleType="centerInside"
            app:srcCompat="@android:drawable/presence_audio_away" />

        <ImageButton
            android:id="@+id/leaveBtn"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="20"
            android:background="@color/purple_700"
            android:scaleType="centerInside"
            app:srcCompat="@android:drawable/ic_delete" />

        <ImageButton
            android:id="@+id/cameraBtn"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="20"
            android:background="@color/purple_200"
            android:scaleType="centerInside"

            app:srcCompat="@android:drawable/presence_video_online" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>